Chore(app): refactor and update ux

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ html {
 
 .App {
   min-height: 100dvh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
@@ -22,7 +22,6 @@ body {
 
 .video {
   height: 40vh !important;
-  margin-bottom: 20px !important;
 }
 
 /* glass efect */
@@ -86,20 +85,21 @@ input:hover {
 
 .nasa-gif {
   height: 130px;
-  cursor: pointer;
+  cursor: default;
+}
+
+footer {
+  margin-top: auto;
 }
 
 @media (max-width: 655px) {
-  .App {
-    display: block;
-  }
-
   .nasa-gif {
     height: 100px;
   }
 
   .text-media {
-    max-width: 245px;
+    max-width: 230px;
+    text-wrap: balance;
   }
 }
 
@@ -118,16 +118,16 @@ input:hover {
 
 .api-url {
   margin-left: 10px;
-  color: rgba(190, 188, 188, 0.678) !important;
-}
-
-.api-url:hover {
   color: rgb(129, 141, 247) !important;
 }
 
 .img-nasa {
   width: 70vh;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
+}
+
+.copyright {
+  color: rgb(119, 126, 190);
 }
 
 /* footer animation */
@@ -182,6 +182,16 @@ footer p a {
   margin-left: 5px;
   color: rgb(129, 141, 247);
 }
+
+.links_footer {
+  text-decoration: none;
+  color: #f1f1f1;
+}
+
+.links_footer:hover {
+  color: #cacaca;
+}
+
 
 /* scroll animation */
 
